<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SolenoidSet" Id="{05a67ab4-4bda-4bd2-bedb-b88979c7eafa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SolenoidSet :
(
	IDLE 				:= 1,	//Idle position all solenoids in false
    LEAKTEST 			:= 2,	//Leak Test position
    LEAKTESTMONITORING 	:= 3,	//Leak Test monitoring position
    AIRDRY 				:= 4 	//air dry position
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>