<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_Calibration" Id="{f2ab8e02-eb8c-441d-b1b0-c2b3833b2b19}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Calibration
VAR_OUTPUT
    bCalibrationFinished : BOOL;  // Done Flag
END_VAR
VAR
	fbLeakTest : FB_LeakTest;
	bLeakTestReset : BOOL := FALSE;
	
	fbCalibrationManager : FB_CalibrationManager;

    bStartCalibrationPrev : BOOL;
    bStartCalibrationEdge : BOOL;
	
	iLastRepSetpoint : INT := -1;
    i : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL_HMI.bCalLeakTestButton THEN
	bLeakTestReset := FALSE;
END_IF

//Instancing and calling fbScaleDevice object
GVL_Calibration.fbScaleDevice(sRemoteHost := GVL_Settings.aBalanceIP, nRemotePort := GVL_Settings.nBalancePort);

// Leak Test request from HMI
fbLeakTest(bExecute := GVL_HMI.bCalLeakTestButton, eSolenoidPosition := E_SolenoidSet.LEAKTEST, tMonitorTime := T#10S, rSystemPressure => GVL_HMI.rCalLealTestPressure);

// Leak Test post treatment
IF fbLeakTest.bLeakTestDone AND NOT fbLeakTest.bLeakTestError THEN
	GVL_HMI.bCalLeakTestPass := TRUE;
	GVL_HMI.bCalLeakTestError := FALSE;
	GVL_HMI.bCalLeakTestButton := FALSE;
	IF NOT bLeakTestReset THEN
		bLeakTestReset := fbLeakTest.Reset();
	END_IF
END_IF

IF fbLeakTest.bLeakTestError THEN
	GVL_HMI.bCalLeakTestError := TRUE;
	GVL_HMI.bCalLeakTestPass := FALSE;
	GVL_HMI.bCalLeakTestButton := FALSE;
	IF NOT bLeakTestReset THEN
		bLeakTestReset := fbLeakTest.Reset();
	END_IF
END_IF

// Distribute the number of replicates for all pumps selected
IF GVL_Calibration.iReplicatesSetpoint <> iLastRepSetpoint THEN
    FOR i := 1 TO 10 DO
        IF GVL_Calibration.aCalibPumps[i].bSelected THEN
            GVL_Calibration.aCalibPumps[i].iReplicates := GVL_Calibration.iReplicatesSetpoint;
        END_IF
    END_FOR;
    iLastRepSetpoint := GVL_Calibration.iReplicatesSetpoint;
END_IF 

//Calibration procedure trigger
bStartCalibrationEdge := GVL_Calibration.bStartCalibration AND NOT bStartCalibrationPrev;
bStartCalibrationPrev := GVL_Calibration.bStartCalibration;

//calibration procedure calling
(*
fbCalibrationManager(
    bExecute := bStartCalibrationEdge,
    bAbort := GVL_Calibration.bAbortCalibration,
    eSolvent := GVL_Calibration.eCalibSolvent,
    aPumpSettings := GVL_Calibration.aCalibPumps,
    tDelayStart := GVL_Calibration.tDelayStart,
    bPrintReport := GVL_Calibration.bPrintWhenComplete,
    aPumpResults => GVL_Calibration.aCalibPumps,
    bDone => GVL_Calibration.bCalibrationDone,
    bBusy => GVL_Calibration.bCalibrationRunning,
    sStatus => GVL_Calibration.sGlobalStatus
);
GVL_Calibration.sGlobalStatus := fbCalibrationManager.sStatus;
*)
]]></ST>
    </Implementation>
    <Method Name="Reset" Id="{27813d8d-2df7-44d9-b974-4b44cba9f55d}">
      <Declaration><![CDATA[METHOD Reset : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_Calibration">
      <LineId Id="44" Count="2" />
      <LineId Id="127" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="38" Count="2" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="47" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="101" Count="7" />
      <LineId Id="96" Count="0" />
      <LineId Id="65" Count="2" />
      <LineId Id="15" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="70" Count="10" />
      <LineId Id="129" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="68" Count="0" />
    </LineIds>
    <LineIds Name="PRG_Calibration.Reset">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>